--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "nodemailer": "^6.9.4",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
