add docker implementation

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "launch": "npm run prep-db && webpack -d eval-source-map && babel-node src/server.js",
     "deps": "npm i -D @babel/node @babel/preset-react @babel/preset-env eslint eslint-config-airbnb eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-react eslint-plugin-react-hooks prettier eslint-config-prettier @babel/plugin-proposal-class-properties babel-loader webpack webpack-cli morgan sequelize-cli && npm i express react react-dom react-router-dom dotenv sequelize pg pg-hstore express-session session-file-store axios bcrypt",
     
-    "build": "webpack -d eval-source-map && babel src --copy-files --out-dir distr",
-    "start": "node distr/server.js"
+    "build": "webpack && babel src --copy-files --out-dir distr",
+    "start": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all && node distr/server.js"
   },
   "keywords": [],
   "author": "",
